--- a/src/main/resources/static/views/investment/Investments.html
+++ b/src/main/resources/static/views/investment/Investments.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="InvestmentController" ng-init="getAllInvestments()">
+<div class="container" ng-init="getAllInvestments()">
 	<div class="row">
 		<h2>All investments:</h2>
 		<div class="col-xs-7 col-sm-5 col-md-4">
@@ -10,7 +10,7 @@
 		</div>
 		<br/>
 		<br/>
-		<div ng-if="investments !== null">
+		<div ng-if="investments.length !== 0">
 			<ul class="list-group checked-list-box">
 				<li ng-repeat="investment in investments | filter:searchText |
 						filter:{'paid' : checkBoxPaid} |
@@ -61,7 +61,7 @@
 				</li>
 			</ul>
 		</div>
-		<div ng-if="investments === null">
+		<div ng-if="investments.length === 0">
 			<p>No investments to manage</p>
 		</div>
 	</div>
