--- a/src/main/resources/static/views/investment/ProjectInvestments.html
+++ b/src/main/resources/static/views/investment/ProjectInvestments.html
@@ -1,6 +1,6 @@
 <div>
 	<h3>Investments</h3>
-	<div ng-if="projectInvestments !== null">
+	<div ng-if="projectInvestments.length !== 0">
 		<div style="max-height: 200px; overflow: auto;">
 			<ul ng-repeat="investment in projectInvestments"
 			    class="list-group checked-list-box">
@@ -26,7 +26,7 @@
 			</ul>
 		</div>
 	</div>
-	<div ng-if="projectInvestments === null">
+	<div ng-if="projectInvestments.length === 0">
 		<p>Your project has no investments yet. Don't worry, it's just a matter of time. :)</p>
 	</div>
 </div>
