--- a/src/main/resources/static/views/investment/UserInvestments.html
+++ b/src/main/resources/static/views/investment/UserInvestments.html
@@ -1,6 +1,6 @@
 <div class="cta-contents" ng-init="getUserInvestments()">
 	<h1 class="cta-title">Investments</h1>
-	<div ng-if="userInvestments !== null">
+	<div ng-if="userInvestments.length !== 0">
 		<div class="cta-desc" style="max-height: 200px; overflow: auto;">
 			<ul ng-repeat="investment in userInvestments"
 			    class="list-group checked-list-box">
@@ -37,7 +37,7 @@
 			</ul>
 		</div>
 	</div>
-	<div ng-if="userInvestments === null">
+	<div ng-if="userInvestments.length === 0">
 		<div class="cta-desc">
 			<p>You haven't invested in any project yet, but we believe in You! You can do it!</p>
 		</div>
