--- a/src/main/resources/static/views/main/CreateAccount.html
+++ b/src/main/resources/static/views/main/CreateAccount.html
@@ -1,36 +1,46 @@
-<div class="container" ng-controller="RegisterController">
+<div class="container">
     <div class="row">
         <div ng-show="error">
-            <div class="alert alert-danger">Wrong email or Password or such user already exist</div>
+            <div class="alert alert-danger">Such user already exist</div>
         </div>
         <div class="col-md-offset-3 col-md-6 col-xs-12">
-            <form class="form-horizontal" role="form" ng-submit="submit()" id="createUser">
-                <input type="hidden" ng-model="user.id">
+            <form class="form-horizontal" role="form" ng-submit="submit()" id="createUser" name="createUserForm">
                 <div class="col-md-offset-1 col-xs-12">
                     <div class="form-group">
                         <label for="email" class="col-xs-3 control-label">Email:</label>
                         <div class="col-xs-9">
                             <input type="text" ng-model="user.email" placeholder="username@example.com"
-                                   class="form-control input-md" id="email"/>
+                                   class="form-control input-md email" id="email" name="email" required="required" />
+                            <span ng-show="createUserForm.$dirty && createUserForm.email.$invalid"><strong>Email is invalid</strong></span>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="password" class="col-xs-3 control-label">Password:</label>
                         <div class="col-xs-9">
-                            <input type="password" ng-model="user.password" class="form-control input-md"
-                                   id="password"/>
+                            <input type="password" ng-model="user.password" class="form-control input-md password"
+                                   id="password" name="password" required ng-minlength="5"/>
+                            <span ng-show="createUserForm.$dirty &&createUserForm.password.$error.minlength">Minimum length required is 5</span>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="confirmPassword" class="col-xs-3 control-label">Confirm Password:</label>
                         <div class="col-xs-9">
-                            <input type="password" ng-model="user.confirmPassword" class="form-control input-md"
-                                   id="confirmPassword"/>
+                            <input type="password" ng-model="user.confirmPassword"
+                                   class="form-control input-md password"
+                                   id="confirmPassword" name="confirmPassword" required="required" />
+                            <span ng-show="createUserForm.$dirty&& createUserForm.confirmPassword.$error.required">This field required</span>
                         </div>
+
                     </div>
+                    <div ng-show="user.password!==user.confirmPassword" class="alert alert-danger">
+                        Passwords does not match
+                    </div>
+
                     <div class="form-group">
                         <div class="btn-group">
-                            <button class="btn btn-success" type="submit">{{!user.id ? 'Create' :'Save'}}</button>
+                            <button class="btn btn-success" type="submit"
+                                    ng-disabled="createUserForm.$invalid">Create
+                            </button>
                             <a class="btn btn-danger" ng-href="#!/">Cancel</a>
                         </div>
                     </div>
