--- a/src/main/resources/static/views/main/CreateAccount.html
+++ b/src/main/resources/static/views/main/CreateAccount.html
@@ -11,7 +11,7 @@
                         <div class="col-xs-9">
                             <input type="text" ng-model="user.email" placeholder="username@example.com"
                                    class="form-control input-md email" id="email" name="email" required="required" />
-                            <span ng-show="createUserForm.$dirty && createUserForm.email.$invalid"><strong>Email is invalid</strong></span>
+                            <span ng-show="createUserForm.$dirty && createUserForm.email.$invalid">Email is invalid</span>
                         </div>
                     </div>
                     <div class="form-group">
