fix email input

--- a/src/main/resources/static/views/main/CreateAccount.html
+++ b/src/main/resources/static/views/main/CreateAccount.html
@@ -9,7 +9,7 @@
                     <div class="form-group">
                         <label for="email" class="col-xs-3 control-label">Email:</label>
                         <div class="col-xs-9">
-                            <input type="text" ng-model="user.email" placeholder="username@example.com"
+                            <input type="email" ng-model="user.email" placeholder="username@example.com"
                                    class="form-control input-md email" id="email" name="email" required="required" />
                             <span ng-show="createUserForm.$dirty && createUserForm.email.$invalid">Email is invalid</span>
                         </div>
