--- a/src/main/resources/static/views/main/CreateAccount.html
+++ b/src/main/resources/static/views/main/CreateAccount.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div ng-show="error">
-            <div class="alert alert-danger">Such user already exist</div>
+            <div class="alert alert-danger">{{error}}</div>
         </div>
         <div class="col-md-offset-3 col-md-6 col-xs-12">
             <form class="form-horizontal" role="form" ng-submit="submit()" id="createUser" name="createUserForm">
