remove ng-controller

--- a/src/main/resources/static/views/main/ForgotPassword.html
+++ b/src/main/resources/static/views/main/ForgotPassword.html
@@ -1,4 +1,4 @@
-<div ng-controller="PasswordResetController">
+<div>
     <div class="modal-header">
         <h4 class="modal-title">Reset password
             <button class="close" type="button" ng-click="closeFpModal()">
