--- a/src/main/resources/static/views/main/LoginPage.html
+++ b/src/main/resources/static/views/main/LoginPage.html
@@ -1,4 +1,4 @@
-<div ng-controller="LoginController">
+<div>
     <div class="modal-header">
         <h4 class="modal-title">Sign in
             <button class="close" type="button" ng-click="close()">
