--- a/src/main/resources/static/views/main/Main.html
+++ b/src/main/resources/static/views/main/Main.html
@@ -37,7 +37,7 @@
     </div>
 </div>
 
-<div class="container" ng-controller="ProjectController">
+<div class="container">
     <div class="row">
         <div class="container">
             <ul class="nav nav-tabs">
