--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-fixed-top ng-cloak" ng-controller="MainController" ng-cloak>
+<div class="navbar navbar-default navbar-fixed-top ng-cloak" ng-cloak>
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -14,7 +14,7 @@
         </div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav navbar-left">
-                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#!/about">About</a></li>
                 <li><a href="#!/projects">Projects</a></li>
 
