--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-fixed-top ng-cloak" ng-cloak>
+<div class="navbar navbar-default navbar-fixed-top ng-cloak" ng-controller="MainController" ng-cloak>
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
