--- a/src/main/resources/static/views/main/Main.html
+++ b/src/main/resources/static/views/main/Main.html
@@ -45,7 +45,7 @@
             </ul>
         </div>
     </div>
-    <div class="row">
+    <div class="row" ng-controller="ProjectController">
         <div ng-repeat="project in projects | limitTo: 6">
             <div class="clearfix" ng-if="$index % 3 == 0"></div>
             <div class="container col-md-4 col-xs-12">
