Login modal fix

--- a/src/main/resources/static/views/main/LoginPage.html
+++ b/src/main/resources/static/views/main/LoginPage.html
@@ -25,7 +25,7 @@
             <a href="#!/createAccount" class="btn btn-primary" ng-click="close()">
                 <span class="fa fa-user-circle-o"></span> Create an account
             </a>
-            <a href="" class="btn btn-info" ng-click="forgotPass()">
+            <a href="" class="btn btn-info" ng-click="openForgotPass()">
                 <span class="fa fa-key fa-fw"></span> Forgot password
             </a>
         </form>
