--- a/src/main/resources/static/views/project/ProjectPage.html
+++ b/src/main/resources/static/views/project/ProjectPage.html
@@ -4,13 +4,16 @@
 		<div class="col-xs-10 col-md-7 col-xs-offset-1 col-lg-8">
 			<!--Project name and goal-->
 			<div class="item">
-				<a ng-if="currentUser.id === project.owner.id && projectInvestments.length === 0" class="btn btn-edit pull-right" ng-click="deleteProject()">
+				<a ng-if="currentUser.id === project.owner.id && projectInvestments.length === 0"
+				   class="btn btn-edit pull-right" ng-click="deleteProject()">
 					<span class="glyphicon glyphicon-trash"></span></a>
-				<a ng-if="currentUser.id === project.owner.id" class="btn btn-edit pull-right" href="#!project/{{project.id}}/edit">
+				<a ng-if="currentUser.id === project.owner.id" class="btn btn-edit pull-right"
+				   href="#!project/{{project.id}}/edit">
 					<span class="glyphicon glyphicon-pencil"></span></a>
 				<div class="thumbnail">
 					<div ng-if="project.desc.image!=null">
-						<img ng-src="data:image/png;base64,{{project.desc.image}}" alt="{{project.desc.name}}" class="centered img-responsive">
+						<img ng-src="data:image/png;base64,{{project.desc.image}}" alt="{{project.desc.name}}"
+						     class="centered img-responsive">
 					</div>
 					<div ng-if="project.desc.image==null">
 						<img src="http://placehold.it/800x450" alt="No image available" class="centered img-responsive">
@@ -21,6 +24,7 @@
 					</div>
 				</div>
 			</div>
+
 			<!--Description-->
 			<div class="item">
 				<div class="thumbnail">
@@ -76,13 +80,16 @@
 								<div class="progress-bar progress-bar-info"
 								     style="{{invProgressWithWidth}}"></div>
 							</div>
-							<h4 class="text-right">Project need {{(project.desc.cost-investedAmount) | currency}}</h4>
+
+							<h4 ng-if="project.desc.cost-investedAmount!==0" class="text-right">Project need
+								{{(project.desc.cost-investedAmount) | currency}}</h4>
 						</div>
 						<div class="panel-footer">
-							<!--todo modal window popup-->
-							<button type="button" class="btn btn-success btn-block" ng-click="openApproveModal()">
+							<button ng-if="project.desc.cost-investedAmount!==0" type="button" class="btn btn-success btn-block" ng-click="openApproveModal()">
 								I want to invest
 							</button>
+							<div ng-if="project.desc.cost-investedAmount===0" class="alert alert-success text-center">Achieved</div>
+
 						</div>
 					</div>
 				</div>
@@ -103,12 +110,15 @@
 							<div class="progress-bar progress-bar-info"
 							     style="{{invProgressWithWidth}}"></div>
 						</div>
-						<h5>Project need {{(project.desc.cost-investedAmount) | currency}}</h5>
+
+						<h4 ng-if="project.desc.cost-investedAmount!==0" class="text-right">Project need
+							{{(project.desc.cost-investedAmount) | currency}}</h4>
 					</div>
 					<div class="panel-footer">
-						<button type="button" class="btn btn-success btn-block" ng-click="openApproveModal()">
+						<button ng-if="project.desc.cost-investedAmount!==0" type="button" class="btn btn-success btn-block" ng-click="openApproveModal()">
 							I want to invest
 						</button>
+						<div ng-if="project.desc.cost-investedAmount===0" class="alert alert-success text-center">Achieved</div>
 					</div>
 				</div>
 			</div>
