--- a/src/main/resources/static/views/project/EditForm.html
+++ b/src/main/resources/static/views/project/EditForm.html
@@ -31,7 +31,8 @@
         <div class="form-group">
             <label for="minInvestment" class="col-xs-3 control-label">Minimum investment:</label>
             <div class="col-xs-9">
-                <input type="number" min="0" ng-model="project.desc.minInvestment" class="form-control input-md" id="minInvestment"/>
+                <input type="number" min="0" ng-model="project.desc.minInvestment" class="form-control input-md"
+                       id="minInvestment"/>
             </div>
             <div class="form-validation"
                  ng-show="project.desc.minInvestment > project.desc.cost">
