--- a/src/main/resources/static/views/project/EditProject.html
+++ b/src/main/resources/static/views/project/EditProject.html
@@ -1,10 +1,9 @@
-
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
             <div class="panel panel-success" style="border: 0">
                 <div class="panel-heading" style="background: #f5f5f5;border: 0">
-                    <a class="btn btn-edit pull-right"  ng-if="project.id" href="#!/project/{{project.id}}">
+                    <a class="btn btn-edit pull-right" ng-if="project.id" href="#!/project/{{project.id}}">
                         <span class="glyphicon glyphicon-pencil"></span></a>
                     <h4>{{!project.id ? 'Create' :'Edit'}} project</h4>
                 </div>
@@ -16,7 +15,8 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
                                 <div class="cropArea">
-                                    <img-crop image="projectImage" result-image="projectCroppedImage" area-type="rectangle"></img-crop>
+                                    <img-crop image="projectImage" result-image="projectCroppedImage"
+                                              area-type="rectangle"></img-crop>
                                 </div>
                                 <div>
                                     <label class="btn btn-default btn-file">
