--- a/src/main/resources/static/views/project/Projects.html
+++ b/src/main/resources/static/views/project/Projects.html
@@ -8,7 +8,8 @@
                         <div class="caption centered">
                             <a href="#!/project/{{project.id}}"><h3>{{project.desc.name}}</h3></a>
                         </div>
-                        <a href="#!/project/{{project.id}}" ng-if="project.desc.image"><img ng-src="data:image/png;base64,{{project.desc.image}}" alt="" class="img-responsive"></a>
+                        <a href="#!/project/{{project.id}}" ng-if="project.desc.image"><img
+                                ng-src="data:image/png;base64,{{project.desc.image}}" alt="" class="img-responsive"></a>
                         <div class="caption">
                             <p>{{project.desc.description}}</p>
                             <hr>
