--- a/src/main/resources/static/views/user/ChangePassword.html
+++ b/src/main/resources/static/views/user/ChangePassword.html
@@ -1,14 +1,15 @@
-<div class="container"  ng-init="deauth()">
+<div class="container" ng-init="deauth()">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
-                <div class="small alert alert-success centered" ng-show="message">
-                    {{message}}
-                </div>
+            <div class="small alert alert-success centered" ng-show="message">
+                {{message}}
+            </div>
             <form role="form" class="form-signin" ng-submit="submitPassword()" ng-show="!message">
                 <h2 class="form-signin-heading">Create new password</h2>
                 <div class="form-group">
                     <label for="password">New password:</label>
-                    <input type="password" id="password" class="form-control" placeholder="Password" ng-model="password"/>
+                    <input type="password" id="password" class="form-control" placeholder="Password"
+                           ng-model="password"/>
                     <label for="confPassword">Confirm password:</label>
                     <input type="password" id="confPassword" class="form-control" placeholder="Confirm password"
                            ng-model="confirmPassword"/>
