--- a/src/main/resources/static/views/user/EditUser.html
+++ b/src/main/resources/static/views/user/EditUser.html
@@ -15,7 +15,8 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
                                 <div class="cropArea">
-                                    <img-crop image="myImage" result-image="myCroppedImage" area-type="rectangle"></img-crop>
+                                    <img-crop image="myImage" result-image="myCroppedImage"
+                                              area-type="rectangle"></img-crop>
                                 </div>
                                 <div>
                                     <label class="btn btn-default btn-file">
