--- a/src/main/resources/static/views/investment/ApproveCreateInvestmentModal.html
+++ b/src/main/resources/static/views/investment/ApproveCreateInvestmentModal.html
@@ -1,4 +1,4 @@
-<div ng-controller="InvestmentController" ng-init="">
+<div>
 	<div class="modal-header">
 		<button class="close" type="button" ng-click="closeApproveModal()">
 			<span class="fa fa-close"></span>
@@ -13,6 +13,6 @@
 	</div>
 	<div class="modal-footer">
 		<button class="btn btn-danger pull-right" type="button" ng-click="closeApproveModal()">Cancel</button>
-		<button class="btn btn-success pull-right" type="button" ng-click="openCreateInvestmentModal()">Next</button>
+		<button class="btn btn-success pull-right" type="button" ng-click="closeCurrentAndOpenCreateInvestmentModal()">Next</button>
 	</div>
 </div>
