--- a/src/main/resources/static/views/investment/add_investment.html
+++ b/src/main/resources/static/views/investment/add_investment.html
@@ -1,11 +1,11 @@
-<div ng-controller="InvestmentController">
+<div>
 	<form class="form" role="form" ng-submit="createInvestment()">
 		<div class="modal-header">
 			<!--todo close button-->
 			<button class="close" type="button" ng-click="closeInvestmentModal()">
 				<span class="fa fa-close"></span>
 			</button>
-			<h3 class="modaltitle">Add an investment</h3>
+			<h3 class="modal-title">Add an investment</h3>
 		</div>
 		<div class="modal-body">
 			<p>Here you can add you investment in "{{project.desc.name}}"</p>
