--- a/src/main/resources/static/views/main/Main.html
+++ b/src/main/resources/static/views/main/Main.html
@@ -45,7 +45,7 @@
             </ul>
         </div>
     </div>
-    <div class="row">
+    <div class="row" ng-controller="ProjectController">
         <div ng-repeat="project in projects | limitTo: 6">
             <div class="clearfix" ng-if="$index % 3 == 0"></div>
             <div class="container col-md-4 col-xs-12">
@@ -54,7 +54,8 @@
                         <div class="caption centered">
                             <a href="#!/project/{{project.id}}"><h3>{{project.desc.name}}</h3></a>
                         </div>
-                        <a href="#!/project/{{project.id}}" ng-if="project.desc.image"><img ng-src="data:image/png;base64,{{project.desc.image}}" alt="" class="img-responsive"></a>
+                        <a href="#!/project/{{project.id}}" ng-if="project.desc.image"><img
+                                ng-src="data:image/png;base64,{{project.desc.image}}" alt="" class="img-responsive"></a>
                         <div class="caption">
                             <p>{{project.desc.description}}</p>
                             <hr>
